[tool.poetry]
name = "romanenko-uchit-bot"
version = "0.1.0"
description = ""
authors = ["romanenko_vova <bonyshd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
